--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,94 @@
+body{
+  width: 1440px;
+  margin: 0;
+  padding: 0;
+  font-feature-settings: "Roboto", Arial, sans-serif;
+  font-size: 14px;
+  background-color: white;
+}
+a {
+  text-decoration: none;
+}
+.menu {
+  margin-bottom: 30px;
+  background-color: gray;
+  font-size: 16px;
+  color: #000000;
+  text-transform: uppercase;
+  display: flex;
+}
+.menu a {
+  margin-left: 60px;
+  margin-top: 30px;
+}
 
-.privilege a{background-color: #fb565a;
-display:block;
-padding:20px 40px;
-width: 132px;
-height: 13px;
-color: #ffffff;
-font-family: Roboto;
-font-size: 16px;
-font-weight: 500;
-line-height: 18px;
-text-decoration:none;
-border-radius: 5px;}
+.site-nav {
+  list-style: none;
+  color: #000000;
+  display: flex;
+  margin-top: 30px;
+}
 
+.privilege a{
+  background-color: #fb565a;
+  padding:20px 40px;
+  width: 132px;
+  height: 13px;
+  color: #ffffff;
+  font-family: Roboto;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 18px;
+  text-decoration:none;
+  border-radius: 3px;
+}
 
+.services {
+  margin-bottom: 100px;
+  display: flex;
+  justify-content: space-around;
+}
+
+.services-item p{
+  width: 300px;
+}
+
+.services-item a{
+  text-transform: uppercase;
+}
+
+.services-item:nth-of-type(1) a{
+  background-color: #fb565a;
+  padding: 15px 30px;
+  border-radius: 3px;
+  color: #ffffff;
+}
+
+.services-item:nth-of-type(2) a{
+  background-color: #00ca74;
+  padding: 15px 30px;
+  border-radius: 3px;
+  color: #ffffff;
+}
+
+.services-item:nth-of-type(3) a{
+  background-color: #efc84a;
+  padding: 15px 30px;
+  border-radius: 3px;
+  color: #ffffff;
+}
+
+.info-privilege {
+  display: flex;
+}
+
+.works ul{
+  list-style: none;
+  display: flex;
+  justify-content: space-around;
+  align-content: center;
+
+}
 
 .footer-main li{background-color: #e1e1e1;
 display: inline-block;
