--- a/css/style.css
+++ b/css/style.css
@@ -112,3 +112,35 @@ border-radius: 50%;
 .price {
   border:none;
 }
+
+.price legend {
+  text-transform: uppercase;
+}
+
+.prices label:first-child {
+  text-transform: uppercase;
+}
+
+.prices {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.flex-price {
+  width: 1440px;
+  display: flex;
+  justify-content: space-around;
+  margin: auto;
+}
+
+.price {
+  display:flex;
+}
+
+.gallery-project ul {
+  display: flex;
+  flex-wrap: wrap;
+  text-decoration: none;
+  list-style: none;
+}
