--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-body{
+body {
   width: 1440px;
   margin: 0;
   padding: 0;
@@ -9,6 +9,7 @@ body{
 a {
   text-decoration: none;
 }
+
 .menu {
   margin-bottom: 30px;
   background-color: gray;
@@ -17,6 +18,7 @@ a {
   text-transform: uppercase;
   display: flex;
 }
+
 .menu a {
   margin-left: 60px;
   margin-top: 30px;
@@ -98,16 +100,53 @@ a {
 
 }
 
-.footer-main li{background-color: #e1e1e1;
-display: inline-block;
-width:79px;
-height:79px;
-border-radius: 50%;
+.contacts {
+  position: relative;
+  width: 1440px;
+  height: 416px;
+  /*background-color: lightgray;
+  background-image: url("../img/map.png");*/
+  margin-top: 50px;
 }
-.footer-main img{position:absolute;display: block;padding-top: 30px;}
-.footer-main li:nth-child(1) img{padding-left: 25px;}
-.footer-main li:nth-child(2) img{padding-left: 33px;}
-.footer-main li:nth-child(3) img{padding-left: 30px;}
+
+.contacts .map {
+  position: absolute;
+}
+
+.contacts-item {
+  display: block;
+  position: absolute;
+  width: 400px;
+  width: 300px;
+  top: 50px;
+  left: 50px;
+  background-color: white;
+  z-index:1;
+}
+
+.contacts .map-marker {
+  position: absolute;
+  top: 87px;
+  left: 822px;
+}
+
+.footer-main li{
+  background-color: #e1e1e1;
+  display: inline-block;
+  width:79px;
+  height:79px;
+  border-radius: 50%;
+}
+
+.footer-main img {
+  position:absolute;
+  display: block;
+  padding-top: 30px;
+}
+
+.footer-main li:nth-child(1) img {padding-left: 25px;}
+.footer-main li:nth-child(2) img {padding-left: 33px;}
+.footer-main li:nth-child(3) img {padding-left: 30px;}
 
 .price {
   border:none;
