--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,4 @@
 body {
-  width: 1440px;
   margin: 0;
   padding: 0;
   font-feature-settings: "Roboto", Arial, sans-serif;
@@ -8,6 +7,10 @@ body {
 }
 a {
   text-decoration: none;
+}
+
+h1 {
+  display: none;
 }
 
 .menu {
@@ -20,7 +23,7 @@ a {
 }
 
 .menu a {
-  margin-left: 60px;
+  margin-left: 140px;
   margin-top: 30px;
 }
 
@@ -33,6 +36,16 @@ a {
   color: #000000;
   display: flex;
   margin-top: 30px;
+}
+
+.privilege {
+  margin-left: 140px;
+}
+
+.privilege h2 {
+  line-height: 55px;
+  font-weight: medium;
+  font-size: 55px;
 }
 
 .privilege a{
@@ -53,6 +66,7 @@ a {
   margin-bottom: 100px;
   display: flex;
   justify-content: space-around;
+  margin-left: 140px;
 }
 
 .services-item p{
@@ -69,7 +83,7 @@ a {
 
 .services-item:nth-of-type(1) a{
   background-color: #fb565a;
-  padding: 15px 30px;
+  padding: 0px 30px 15px;
   border-radius: 3px;
   color: #ffffff;
 }
@@ -90,6 +104,7 @@ a {
 
 .info-privilege {
   display: flex;
+  margin-left: 140px;
 }
 
 .works ul{
@@ -97,7 +112,10 @@ a {
   display: flex;
   justify-content: space-around;
   align-content: center;
+}
 
+.works h2 {
+  display: none;
 }
 
 .contacts {
@@ -108,31 +126,29 @@ a {
   margin-top: 50px;
   margin-bottom: 50px;
 }
-
+/*
 .contacts .map {
   position: absolute;
 }
-
+*/
 .contacts-item {
-  display: block;
-  margin-left: 50px;
+  display: absolute;
+  left:150px;
   width: 100px;
   min-height: 50px;
   border:2px solid black;
+  background-color: white;
 }
 
 .contacts .map-marker {
   position: absolute;
   top: 87px;
   left: 822px;
-
 }
 
 .footer-main {
   display: flex;
   align-items: center;
-
-
 }
 
 .footer-main ul {
@@ -160,6 +176,10 @@ a {
 .footer-main img:nth-child(1) {padding-left: 25px;}
 .footer-main img:nth-child(2) {padding-left: 40px;}
 .footer-main img:nth-child(3) {padding-left: 30px;}
+
+.form-input {
+  display: none;
+}
 
 .price {
   border:none;
