--- a/css/style.css
+++ b/css/style.css
@@ -9,8 +9,9 @@ a {
   text-decoration: none;
 }
 
-h1 {
-  display: none;
+.visually-hidden {
+  position: absolute;
+  clip: rect(0 0 0 0);
 }
 
 .menu {
@@ -23,7 +24,7 @@ h1 {
 }
 
 .menu a {
-  margin-left: 140px;
+  margin-left: 40px;
   margin-top: 30px;
 }
 
@@ -36,6 +37,7 @@ h1 {
   color: #000000;
   display: flex;
   margin-top: 30px;
+  flex-wrap: wrap;
 }
 
 .privilege {
@@ -83,7 +85,7 @@ h1 {
 
 .services-item:nth-of-type(1) a{
   background-color: #fb565a;
-  padding: 0px 30px 15px;
+  padding: 15px 30px 15px;
   border-radius: 3px;
   color: #ffffff;
 }
@@ -114,10 +116,6 @@ h1 {
   align-content: center;
 }
 
-.works h2 {
-  display: none;
-}
-
 .contacts {
   position: relative;
   width: 1440px;
@@ -131,10 +129,12 @@ h1 {
   position: absolute;
 }
 */
-.contacts-item {
+.contacts div {
   display: absolute;
-  left:150px;
-  width: 100px;
+  padding: 20px;
+  top: 2500px;
+  left:500px;
+  width: 150px;
   min-height: 50px;
   border:2px solid black;
   background-color: white;
