--- a/css/style.css
+++ b/css/style.css
@@ -14,18 +14,34 @@ a {
   clip: rect(0 0 0 0);
 }
 
+.header-top {
+  width: 1440px;
+  margin: 0 auto;
+}
+
 .menu {
+  margin-top: 30px;
   margin-bottom: 30px;
   background-color: gray;
   font-size: 16px;
   color: #000000;
   text-transform: uppercase;
   display: flex;
+  align-items: center;
+}
+
+.menu .logo {
+  margin-left: 140px;
 }
 
 .menu a {
-  margin-left: 40px;
+  margin-left: 50px;
   margin-top: 30px;
+  color: black;
+}
+
+.menu ul {
+  margin-left: 200px;
 }
 
 .menu li {
@@ -38,6 +54,11 @@ a {
   display: flex;
   margin-top: 30px;
   flex-wrap: wrap;
+}
+
+main {
+  width: 1440px;
+  margin: 0 auto;
 }
 
 .privilege {
@@ -131,12 +152,11 @@ a {
 */
 .contacts div {
   display: absolute;
-  padding: 20px;
+  padding: 60px 50px;
   top: 2500px;
   left:500px;
-  width: 150px;
+  width: 300px;
   min-height: 50px;
-  border:2px solid black;
   background-color: white;
 }
 
@@ -147,6 +167,8 @@ a {
 }
 
 .footer-main {
+  width: 1440px;
+  margin: 0 auto;
   display: flex;
   align-items: center;
 }
