--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 body {
+  width: 1440px;
   margin: 0;
   padding: 0;
   font-feature-settings: "Roboto", Arial, sans-serif;
@@ -15,7 +16,7 @@ a {
 }
 
 .header-top {
-  width: 1440px;
+  width: 1160px;
   margin: 0 auto;
 }
 
@@ -56,8 +57,8 @@ a {
   flex-wrap: wrap;
 }
 
-main {
-  width: 1440px;
+.content {
+  width: 1160px;
   margin: 0 auto;
 }
 
@@ -145,15 +146,11 @@ main {
   margin-top: 50px;
   margin-bottom: 50px;
 }
-/*
-.contacts .map {
-  position: absolute;
-}
-*/
-.contacts div {
+
+.contacts .contacts-item {
   display: absolute;
   padding: 60px 50px;
-  top: 2500px;
+  top: -300px;
   left:500px;
   width: 300px;
   min-height: 50px;
@@ -167,7 +164,7 @@ main {
 }
 
 .footer-main {
-  width: 1440px;
+  width: 950px;
   margin: 0 auto;
   display: flex;
   align-items: center;
