--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-  width: 1440px;
+  width: 100%;
   margin: 0;
   padding: 0;
   font-feature-settings: "Roboto", Arial, sans-serif;
@@ -16,7 +16,14 @@ a {
 }
 
 .header-top {
+  width: 100%;
+  margin: 0 auto;
+}
+
+.header-top-container {
   width: 1160px;
+  padding-left: 20px;
+  padding-right: 20px;
   margin: 0 auto;
 }
 
@@ -60,6 +67,8 @@ a {
 .content {
   width: 1160px;
   margin: 0 auto;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 .privilege {
