--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@ a {
 .menu {
   margin-top: 30px;
   margin-bottom: 30px;
-  background-color: gray;
+  background-color: #eeeeee;
   font-size: 16px;
   color: #000000;
   text-transform: uppercase;
@@ -39,17 +39,17 @@ a {
 }
 
 .menu .logo {
-  margin-left: 140px;
+
 }
 
 .menu a {
-  margin-left: 50px;
+
   margin-top: 30px;
   color: black;
 }
 
 .menu ul {
-  margin-left: 200px;
+
 }
 
 .menu li {
@@ -72,7 +72,7 @@ a {
 }
 
 .privilege {
-  margin-left: 140px;
+
 }
 
 .privilege h2 {
@@ -99,7 +99,7 @@ a {
   margin-bottom: 100px;
   display: flex;
   justify-content: space-around;
-  margin-left: 140px;
+
 }
 
 .services-item p{
@@ -137,7 +137,6 @@ a {
 
 .info-privilege {
   display: flex;
-  margin-left: 140px;
 }
 
 .works ul{
@@ -161,8 +160,8 @@ a {
   padding: 60px 50px;
   top: -300px;
   left:500px;
-  width: 300px;
-  min-height: 50px;
+  width: 320px;
+  height: 310px;
   background-color: white;
 }
 
@@ -228,7 +227,6 @@ a {
 }
 
 .flex-price {
-  width: 1440px;
   display: flex;
   justify-content: space-around;
   margin: auto;
