--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,7 @@ a {
 }
 
 .menu {
-  margin-top: 30px;
+  margin-top: 0px;
   margin-bottom: 30px;
   font-size: 16px;
   color: #000000;
@@ -93,19 +93,12 @@ a {
 }
 
 .basket li {
-  padding-left: 30px;
-  position: relative;
+  position:relative;
 }
 
- .basket .box::before {
-  content:"";
-  width: 15px;
-  height: 15px;
-  background: url("img/cart-icon.svg") no-repeat 50% 50%;
+.basket img {
   position: absolute;
-  left: -20px;
-  top: 1px;
-  border: 1px solid;
+  left: -40px;
 }
 
 .content {
@@ -354,11 +347,15 @@ a {
 
 .contacts {
   position: relative;
-  width: 1440px;
+  width: 100%;
   height: 416px;
   background-image: url("../img/map.png");
   margin-top: 50px;
   margin-bottom: 70px;
+}
+
+.contacts img {
+  margin: 0 auto;
 }
 
 .contacts .contacts-item {
@@ -479,6 +476,10 @@ a {
   font-size: 55px;
 }
 
+.flex-price-form {
+  margin-right: 140px;
+}
+
 .filter-item {
   margin: 0;
   padding: 0;
@@ -591,7 +592,7 @@ a {
 .flex-price {
   display: flex;
   justify-content: space-around;
-  margin: auto;
+  margin: 0 auto;
 }
 
 .price {
