--- a/css/style.css
+++ b/css/style.css
@@ -692,13 +692,17 @@ a {
   width: 9px;
   height: 9px;
   border: 4px solid #ffffff;
-  box-shadow: 0 0 0 4px #283136;
+  box-shadow: 0 0 0 4px #b8b8b8;
   border-radius: 50%;
-  background-color: #ffffff;
+  background-color: #b8b8b8;
   cursor: pointer;
   opacity: 0.4;
 }
 
+.price .btn:hover::before {
+  box-shadow: 0 0 0 4px #4d4d4d;
+  background-color: #4d4d4d;
+}
 
 .btn-1:checked ~ .btn[for="adaptive-item"]::before {
   content:"";
@@ -918,7 +922,7 @@ opacity: 1;
   align-items: center;
 }
 
-.sort-item-1 li {
+.sort-item-1 a {
   margin-right: 0px;
   font-weight: normal;
   color: #000000;
@@ -927,11 +931,11 @@ opacity: 1;
   line-height: 18px;
 }
 
-.sort-item-1 li:hover {
+.sort-item-1 a:hover {
   opacity: 0.6;
 }
 
-.sort-item-1 li:active {
+.sort-item-1 a:active {
   opacity: 1;
 }
 
@@ -1062,18 +1066,25 @@ opacity: 1;
   background-color: #d7373b;
 }
 
-.paginator {
+.gallery-project .paginator {
+  min-width: 444px;
   text-align: left;
-  padding-left: 40px;
+  display: flex;
+  justify-content: flex-start;
+}
+
+.paginator li {
+  margin: 0;
+  padding: 0;
+  margin-right: 10px;
 }
 
 .paginator a {
-  display: inline-block;
+  display: block;
   text-decoration: none;
-  margin-right: 10px;
   line-height: 50px;
-  padding: 0px 20px;
   height: 50px;
+  padding: 0 20px;
   background-color: #eeeeee;
   color: #000000;
   font-weight: 600;
@@ -1099,10 +1110,6 @@ opacity: 1;
 .paginator .next {
   padding-left: 80px;
   padding-right: 80px;
-}
-
-.paginator .prev {
-
 }
 
 .paginator .current {
