--- a/css/style.css
+++ b/css/style.css
@@ -168,12 +168,64 @@ a {
   color: #dd6164;
 }
 
-.slider {
-  position: relative;
-  width: 698px;
-  height: 413px;
+.header-top-container-2 {
+  display: flex;
 }
 
+.second-slider {
+  margin: 0 auto;
+  width: 760px;
+  height: 414px;
+  border: 1px solid;
+}
+
+.slider {
+  position: relative;
+  width: 760px;
+  height: 414px;
+}
+
+.slider-controls {
+  position: absolute;
+  bottom: 95px;
+  left: 108px;
+  display: inline-block;
+  height: 18px;
+  z-index: 100;
+}
+
+.slider-controls label {
+  display: inline-block;
+  width: 18px;
+  height: 18px;
+  margin-right: 15px;
+  vertical-align: top;
+  font-size: 0;
+  background-color: #ffffff;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.second-slider .btn-1:checked ~ .second-slider label[for="slide-1"] {
+  display: inline-block;
+  width: 18px;
+  height: 18px;
+  margin-right: 15px;
+  vertical-align: top;
+  font-size: 0;
+  background-color: #000000;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.second-slider .btn-2:checked ~ .second-slider label[for="slide-2"] {
+  background-color: #000000;
+}
+
+.second-slider .btn-3:checked ~ .second-slider label[for="slide-3"] {
+  background-color: #000000;
+}
+/*
 .slider input[type="radio"] {
   display: none;
 }
@@ -189,7 +241,7 @@ a {
 }
 
 .slider-controls label {
-/*  display: inline-block; */
+ display: inline-block;
   width: 4px;
   height: 4px;
   border: 2px solid #ffffff;
@@ -234,7 +286,7 @@ a {
 #btn-3:checked ~ .slider-inner .slider-slides {
   transform: translate(-1396px);
 }
-
+*/
 .services {
   margin-bottom: 100px;
   padding-bottom: 100px;
@@ -431,6 +483,10 @@ a {
   background-image: url("../img/map.png");
   margin-top: 50px;
   margin-bottom: 70px;
+}
+
+.google-maps {
+  border: 0;
 }
 
 .contacts img {
