--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,7 @@ a {
   width: 100%;
   margin: 0 auto;
   background-color: #eeeeee;
+  margin-bottom: 80px;
 }
 
 .header-top-container {
@@ -194,7 +195,7 @@ a {
   z-index: 100;
 }
 
-.slider-controls label {
+.slider-controls .slider-out {
   display: inline-block;
   width: 18px;
   height: 18px;
@@ -206,23 +207,16 @@ a {
   cursor: pointer;
 }
 
-.second-slider .btn-1:checked ~ .second-slider label[for="slide-1"] {
-  display: inline-block;
-  width: 18px;
-  height: 18px;
-  margin-right: 15px;
-  vertical-align: top;
-  font-size: 0;
+.btn-10:checked ~ .slider-controls .slider-out[for="slide-1"] {
   background-color: #000000;
-  border-radius: 50%;
-  cursor: pointer;
+  background-image: url("../img/slide1.png");
 }
 
-.second-slider .btn-2:checked ~ .second-slider label[for="slide-2"] {
+.btn-11:checked ~ .slider-controls .slider-out[for="slide-2"] {
   background-color: #000000;
 }
 
-.second-slider .btn-3:checked ~ .second-slider label[for="slide-3"] {
+.btn-12:checked ~ .slider-controls .slider-out[for="slide-3"] {
   background-color: #000000;
 }
 /*
@@ -750,56 +744,59 @@ a {
   border: 4px solid #ffffff;
   box-shadow: 0 0 0 4px #b8b8b8;
   border-radius: 50%;
-  background-color: #b8b8b8;
+  background-color: #ffffff;
   cursor: pointer;
   opacity: 0.4;
 }
 
 .price .btn:hover::before {
   box-shadow: 0 0 0 4px #4d4d4d;
-  background-color: #4d4d4d;
+}
+
+.price .btn:disabled::before {
+  box-shadow: 0 0 0 4px #ededed;
 }
 
 .btn-1:checked ~ .btn[for="adaptive-item"]::before {
-  content:"";
-  position: absolute;
-  left: 0px;
-  width: 9px;
-  height: 9px;
-  border: 4px solid #ffffff;
-  box-shadow: 0 0 0 4px #283136;
-  border-radius: 50%;
-  background-color: #000000;
+  box-shadow: 0 0 0 4px #b8b8b8;
+  background-color: #b8b8b8;
   cursor: pointer;
-  opacity: 1;
+}
+
+.btn-1:checked ~ .btn[for="adaptive-item"]:hover::before {
+  box-shadow: 0 0 0 4px #4d4d4d;
+  background-color: #4d4d4d;
+  cursor: pointer;
+}
+
+.btn-1:checked ~ .btn[for="adaptive-item"]:disabled::before {
+  box-shadow: 0 0 0 4px #ededed;
+  background-color: #ededed;
+  cursor: pointer;
 }
 
 .btn-2:checked ~ .btn[for="fixed-item"]::before {
-  content:"";
-  position: absolute;
-  left: 0px;
-  width: 9px;
-  height: 9px;
-  border: 4px solid #ffffff;
-  box-shadow: 0 0 0 4px #283136;
-  border-radius: 50%;
-  background-color: #000000;
+  box-shadow: 0 0 0 4px #b8b8b8;
+  background-color: #b8b8b8;
   cursor: pointer;
-  opacity: 1;
+}
+
+.btn-2:checked ~ .btn[for="fixed-item"]:hover::before {
+  box-shadow: 0 0 0 4px #4d4d4d;
+  background-color: #4d4d4d;
+  cursor: pointer;
 }
 
 .btn-3:checked ~ .btn[for="rubber-item"]::before {
-  content:"";
-  position: absolute;
-  left: 0px;
-  width: 9px;
-  height: 9px;
-  border: 4px solid #ffffff;
-  box-shadow: 0 0 0 4px #283136;
-  border-radius: 50%;
-  background-color: #000000;
+  box-shadow: 0 0 0 4px #b8b8b8;
+  background-color: #b8b8b8;
   cursor: pointer;
-  opacity: 1;
+}
+
+.btn-3:checked ~ .btn[for="rubber-item"]:hover::before {
+  box-shadow: 0 0 0 4px #4d4d4d;
+  background-color: #4d4d4d;
+  cursor: pointer;
 }
 
 .checkbox::before {
@@ -808,9 +805,13 @@ a {
   left: -2px;
   width: 19px;
   height: 19px;
-  border: 2px solid #283136;
+  border: 2px solid #4d4d4d;
   opacity: 0.4;
   cursor: pointer;
+}
+
+.checkbox:hover::before {
+  opacity: 1;
 }
 
 .btn-4:checked ~ .checkbox[for="slider-field"]::after {
@@ -819,14 +820,19 @@ a {
   left: 5px;
   width: 17px;
   height: 6px;
-  border: 3px solid #283136;
+  border: 3px solid #4d4d4d;
   border-top-color: transparent;
   border-right-color: transparent;
   transform: rotate(-45deg);
   cursor: pointer;
+  opacity: 0.4;
 }
 
-.btn-4:checked ~ .checkbox[for="slider-field"]::before {
+.btn-4:checked ~ .checkbox[for="slider-field"]:hover::after {
+  opacity: 1;
+}
+
+.btn-4:checked ~ .checkbox[for="slider-field"]:hover::before {
 opacity: 1;
 }
 
@@ -836,14 +842,19 @@ opacity: 1;
   left: 5px;
   width: 17px;
   height: 6px;
-  border: 3px solid #283136;
+  border: 3px solid #4d4d4d;
   border-top-color: transparent;
   border-right-color: transparent;
   transform: rotate(-45deg);
   cursor: pointer;
+  opacity: 0.4;
 }
 
-.btn-5:checked ~ .checkbox[for="advantage-field"]::before {
+.btn-5:checked ~ .checkbox[for="advantage-field"]:hover::before {
+  opacity: 1;
+}
+
+.btn-5:checked ~ .checkbox[for="advantage-field"]:hover::after {
   opacity: 1;
 }
 
@@ -853,14 +864,19 @@ opacity: 1;
   left: 5px;
   width: 17px;
   height: 6px;
-  border: 3px solid #283136;
+  border: 3px solid #4d4d4d;
   border-top-color: transparent;
   border-right-color: transparent;
   transform: rotate(-45deg);
   cursor: pointer;
+  opacity: 0.4;
 }
 
-.btn-6:checked ~ .checkbox[for="news-field"]::before {
+.btn-6:checked ~ .checkbox[for="news-field"]:hover::before {
+  opacity: 1;
+}
+
+.btn-6:checked ~ .checkbox[for="news-field"]:hover::after {
   opacity: 1;
 }
 
@@ -870,14 +886,19 @@ opacity: 1;
   left: 5px;
   width: 17px;
   height: 6px;
-  border: 3px solid #283136;
+  border: 3px solid #4d4d4d;
   border-top-color: transparent;
   border-right-color: transparent;
   transform: rotate(-45deg);
   cursor: pointer;
+  opacity: 0.4;
 }
 
-.btn-7:checked ~ .checkbox[for="gallery-field"]::before {
+.btn-7:checked ~ .checkbox[for="gallery-field"]:hover::before {
+  opacity: 1;
+}
+
+.btn-7:checked ~ .checkbox[for="gallery-field"]:hover::after {
   opacity: 1;
 }
 
@@ -887,14 +908,19 @@ opacity: 1;
   left: 5px;
   width: 17px;
   height: 6px;
-  border: 3px solid #283136;
+  border: 3px solid #4d4d4d;
   border-top-color: transparent;
   border-right-color: transparent;
   transform: rotate(-45deg);
   cursor: pointer;
+  opacity: 0.4;
 }
 
-.btn-8:checked ~ .checkbox[for="basket-field"]::before {
+.btn-8:checked ~ .checkbox[for="basket-field"]:hover::before {
+  opacity: 1;
+}
+
+.btn-8:checked ~ .checkbox[for="basket-field"]:hover::after {
   opacity: 1;
 }
 
