--- a/css/style.css
+++ b/css/style.css
@@ -257,173 +257,6 @@ a {
   padding-right: 20px;
 }
 
-/*.privilege {
-  background-color: #eeeeee;
-  display: flex;
-  margin-bottom: 80px;
-}
-
-.privilege h2 {
-  line-height: 55px;
-  font-weight: 600;
-  font-size: 55px;
-}
-
-.privilege-items {
-  width: 420px;
-  padding-left: 20px;
-  padding-right: 20px;
-}
-
-.privilege p {
-  font-size: 16px;
-  line-height: 24px;
-  font-weight: normal;
-  margin-bottom: 40px;
-}
-
-.privilege a {
-  background-color: #fb565a;
-  padding:20px 40px;
-  width: 132px;
-  height: 13px;
-  color: #ffffff;
-  font-family: Roboto;
-  font-size: 16px;
-  font-weight: 500;
-  line-height: 18px;
-  text-decoration:none;
-  border-radius: 3px;
-}
-
-.privilege a:hover {
-  background-color: #e74246;
-}
-
-.privilege a:active {
-  background-color: #d7373b;
-  color: #dd6164;
-}
-
-.header-top-container-2 {
-  display: flex;
-}
-
-.second-slider {
-  margin: 0 auto;
-  width: 760px;
-  height: 414px;
-  border: 1px solid;
-}
-
-.slider {
-  position: relative;
-  width: 760px;
-  height: 414px;
-}
-
-.slider-controls {
-  position: absolute;
-  bottom: 95px;
-  left: 108px;
-  display: inline-block;
-  height: 18px;
-  z-index: 100;
-}
-
-.slider-controls .slider-out {
-  display: inline-block;
-  width: 18px;
-  height: 18px;
-  margin-right: 15px;
-  vertical-align: top;
-  font-size: 0;
-  width: 4px;
-  height: 4px;
-  border: 2px solid #ffffff;
-  border-radius: 50%;
-  background-color: #ffffff;
-  box-shadow: 0 0 0 3px #ffffff;
-}
-
-.btn-10:checked + .slider-out[for="slide-1"] {
-  border: 2px solid #c1c1c1;
-
-}
-
-.btn-11:checked + .slider-out[for="slide-2"] {
-  border: 2px solid #c1c1c1;
-}
-
-.btn-12:checked + .slider-out[for="slide-3"] {
-  border: 2px solid #c1c1c1;
-}
-
-.slider-out[for="slide-1"] ~ .slider {
-  background-image: url("../img/slide1.png");
-}
-
-.slider input[type="radio"] {
-  display: none;
-}
-
-.slider-controls {
-  display: flex;
-  justify-content: space-between;
-  position: absolute;
-  width: 88px;
-  top: 300px;
-  left: 123px;
-  vertical-align: middle;
-}
-
-.slider-controls label {
- display: inline-block;
-  width: 4px;
-  height: 4px;
-  border: 2px solid #ffffff;
-  border-radius: 50%;
-  background-color: #ffffff;
-  box-shadow: 0 0 0 3px #ffffff;
-}
-
-.btn-1:checked ~ .slider-controls label[for="btn-1"] {
-  border: 2px solid #c1c1c1;
-}
-
-.btn-2:checked ~ .slider-controls label[for="btn-2"] {
-  border: 2px solid #c1c1c1;
-}
-
-.btn-3:checked ~ .slider-controls label[for="btn-3"] {
-  border: 2px solid #c1c1c1;
-}
-
-.slider-inner {
-  overflow: hidden;
-}
-
-.slider-slides {
-  width: 400%;
-  transition: transform 0s;
-}
-
-.slider-slides img {
-  float: left;
-}
-
-#btn-1:checked ~ .slider-inner .slider-slides {
-  transform: translate(0);
-}
-
-#btn-2:checked ~ .slider-inner .slider-slides {
-  transform: translate(-698px);
-}
-
-#btn-3:checked ~ .slider-inner .slider-slides {
-  transform: translate(-1396px);
-}
-*/
 .services {
   margin-bottom: 100px;
   padding-bottom: 100px;
@@ -729,9 +562,39 @@ a {
   line-height: 22px;
 }
 
-.form-input {
+/*.form-input {
   display: none;
+}*/
+
+.modal {
+  position: fixed;
+  color: #000000;
+  background-color: red;
 }
+
+.modal-login {
+  top: 200px;
+  left: 50%;
+
+  width: 760px;
+  padding-top: 75px;
+  padding-left: 80px;
+  padding-right: 120px;
+  padding-bottom: 80px;
+}
+
+.modal-close {
+  position: absolute;
+  top: 80px;
+  right: 110px;
+  width: 22px;
+  height: 22px;
+  background-color: red;
+  border: 0;
+
+  cursor: pointer;
+}
+
 /* стили магазина */
 
 .menu-item-1 .logo:active {
