--- a/css/style.css
+++ b/css/style.css
@@ -23,19 +23,23 @@ a {
   width: 100%;
   margin: 0 auto;
   background-color: #eeeeee;
-  margin-bottom: 80px;
+  margin-bottom: 69px;
 }
 
 .header-top-container {
   width: 1160px;
+  margin: 0 auto;
   padding-left: 20px;
   padding-right: 20px;
-  margin: 0 auto;
+}
+
+.header-top-container-1 {
+  padding-top: 40px;
 }
 
 .menu {
+  width: 1222px;
   margin-top: 0px;
-  margin-bottom: 30px;
   font-size: 16px;
   color: #000000;
   text-transform: uppercase;
@@ -52,20 +56,21 @@ a {
 }
 
 .menu .logo {
+  padding-left: 65px;
   margin-left: 0px;
-  margin-right: 200px;
+  margin-right: 160px;
 }
 
 .site-nav li {
-  margin-right: 46px;
+  margin-right: 47px;
 }
 
 .menu a {
-  margin-top: 30px;
   color: black;
 }
 .menu-item-1-container {
-  max-width: 640px;
+  max-width: 645px;
+  padding-top: 17px;
 }
 
 .menu li {
@@ -74,8 +79,6 @@ a {
 
 .site-nav a {
   color: #000000;
-  padding-top: 30px;
-  padding-bottom: 10px;
 }
 
 .active:link a{
@@ -97,13 +100,14 @@ a {
   list-style: none;
   color: #000000;
   display: flex;
-  margin-top: 30px;
   flex-wrap: wrap;
 }
 
+.menu-item-2 {
+  padding-top: 33px;
+}
+
 .menu-item-2 .box {
-  padding-top: 30px;
-  padding-bottom: 10px;
   padding-left: 45px;
 }
 
@@ -113,13 +117,13 @@ a {
 
 .basket img {
   position: absolute;
-  left: 0px;
+  left: 5px;
 }
 
 .header-top-container-2 {
   height: 414px;
   margin: 0 auto;
-  padding: 0 0px;
+  padding: 0 0 0 62px;
   height: 432px;
 }
 
@@ -184,12 +188,13 @@ a {
   font-size: 16px;
   line-height: 24px;
   font-weight: normal;
-  margin-bottom: 50px;
+  margin-bottom: 60px;
 }
 
 .slide-button {
+  text-transform: uppercase;
   background-color: #fb565a;
-  padding:20px 40px;
+  padding:15px 54px;
   width: 132px;
   height: 13px;
   color: #ffffff;
@@ -258,7 +263,8 @@ a {
 }
 
 .services {
-  margin-bottom: -10px;
+  margin-left: 63px;
+  margin-bottom: 25px;
   padding-bottom: 100px;
   display: flex;
   justify-content: left;
@@ -270,28 +276,36 @@ a {
 }
 
 .services-item img {
-  margin-bottom: 30px;
+  margin-bottom: 0px;
 }
 
 .services-item p {
-  width: 300px;
-  margin-bottom: 40px;
+  font-size: 16px;
+  line-height: 24px;
+  color: #283136;
+  width: 275px;
+  margin-bottom: 48px;
 }
 
 .services-item h3 {
+  font-size: 24px;
+  line-height: 30px;
+  font-weight: bold;
   text-transform: uppercase;
-  margin-bottom: 25px;
+  margin-bottom: 15px;
 }
 
 .services-item a {
   text-transform: uppercase;
+  font-size: 16px;
+  line-height: 18px;
+  padding: 15px 42px 15px;
+  border-radius: 3px;
+  color: #ffffff;
 }
 
 .services-item:nth-of-type(1) a{
   background-color: #fb565a;
-  padding: 15px 30px 15px;
-  border-radius: 3px;
-  color: #ffffff;
 }
 
 .services-item:nth-of-type(1):hover a{
@@ -305,9 +319,6 @@ a {
 
 .services-item:nth-of-type(2) a{
   background-color: #00ca74;
-  padding: 15px 30px;
-  border-radius: 3px;
-  color: #ffffff;
 }
 
 .services-item:nth-of-type(2):hover a{
@@ -321,9 +332,6 @@ a {
 
 .services-item:nth-of-type(3) a{
   background-color: #efc84a;
-  padding: 15px 30px;
-  border-radius: 3px;
-  color: #ffffff;
 }
 
 .services-item:nth-of-type(3):hover a{
@@ -337,24 +345,30 @@ a {
 
 .info-privilege {
   display: flex;
-  padding-bottom: 80px;
-  margin-bottom: 45px;
+  margin-left: 62px;
+  padding-bottom: 50px;
+  margin-bottom: 60px;
   border-bottom: 1px solid #eeeeee;
 }
 
 .info {
-  width: 660px;
+  width: 722px;
   margin-right: 140px;
 }
 
 .info-item-1 {
+  width: 660px;
   font-size: 45px;
   line-height: 45px;
+  margin-bottom: 33px;
+  padding-left: 5px;
 }
 
 .info-item-2 {
   font-size: 16px;
   line-height: 24px;
+  padding-left: 5px;
+  margin-bottom: 40px;
 }
 
 .info-item-3 {
@@ -362,6 +376,7 @@ a {
   line-height: 24px;
   text-transform: uppercase;
   font-weight: bold;
+  margin-bottom: 23px;
 }
 
 .info ul {
@@ -373,7 +388,12 @@ a {
 }
 
 .info li {
-  margin-bottom: 15px;
+  margin-bottom: 24px;
+}
+
+.info-item-4 {
+  font-size: 16px;
+  line-height: 24px;
 }
 
 .info li::before {
@@ -382,16 +402,16 @@ a {
   width: 25px;
   height:2px;
   background-color: #fb565a;
-  top: 8px;
-  left: 0px;
+  top: 10px;
+  left: 3px;
 }
 
 .info li:nth-of-type(2)::before {
-  top: 39px;
+  top: 60px;
 }
 
 .info li:nth-of-type(3)::before {
-  top: 70px;
+  top: 105px;
 }
 
 .privilege-item p {
@@ -399,6 +419,8 @@ a {
   line-height: 24px;
   font-weight: bold;
   text-transform: uppercase;
+  padding-left: 10px;
+  margin-top: 45px;
   margin-bottom: 50px;
 }
 
@@ -422,8 +444,9 @@ a {
 }
 
 .works {
+  margin-left: 62px;
   margin-bottom: 80px;
-  padding-bottom: 35px;
+  padding-bottom: 15px;
   border-bottom: 1px solid #eeeeee;
 }
 
@@ -452,7 +475,7 @@ a {
   height: 416px;
   background-image: url("../img/map.png");
   margin-top: 50px;
-  margin-bottom: 70px;
+  margin-bottom: 50px;
 }
 
 .google-maps {
@@ -465,17 +488,20 @@ a {
 
 .contacts .contacts-item {
   position: absolute;
-  padding: 60px 50px;
+  padding: 30px 50px;
   top: 53px;
-  left: 90px;
+  left: 140px;
   width: 220px;
-  height: 190px;
+  height: 250px;
   background-color: white;
 }
 
 .contacts-item .message {
   display: block;
   text-transform: uppercase;
+  font-family: Roboto;
+  font-size: 16px;
+  line-height: 18px;
   padding-top: 18px;
   padding-left: 45px;
   padding-right: 45px;
@@ -485,10 +511,19 @@ a {
   border-radius: 2px;
 }
 
+.contacts-item .message:hover {
+  background-color: #e74246;
+}
+
+.tel-item {
+  margin-bottom: 38px;
+}
+
 .contacts-item .tel {
-  display: block;
-  color: #000000;
-  margin-bottom: 35px;
+  font-family: Roboto;
+  font-size: 16px;
+  line-height: 18px;
+  color: #666666;
 }
 
 .contacts-item .bold {
@@ -496,6 +531,14 @@ a {
   font-size: 18px;
   line-height: 30px;
   font-weight: bold;
+  margin-bottom: 25px;
+}
+
+.adress {
+  font-family: Roboto;
+  font-size: 16px;
+  line-height: 18px;
+  color: #666666;
 }
 
 .contacts .map-marker {
@@ -518,14 +561,17 @@ a {
   display: flex;
   justify-content: left;
   width: 400px;
-  margin: 0;
+  margin-left: 62px;
   padding: 0;
   list-style: none;
 }
 
+.footer-main li {
+  position: relative;
+}
+
 .footer-main a{
   display: block;
-  position: relative;
   background-color: #e1e1e1;
   width:79px;
   height:79px;
@@ -544,20 +590,26 @@ a {
 .footer-main img {
   position: absolute;
   top: 30px;
+  left: 35px;
 }
 
 .footer-main img:nth-child(1) {left: 25px;}
 .footer-main img:nth-child(2) {left: 20px;}
 .footer-main img:nth-child(3) {left: 30px;}
 
+
+
 .sale h3 {
+  font-family: Roboto;
   font-size: 36px;
   line-height: 36px;
   font-weight: bold;
-  margin-bottom: 10px;
+  margin-top: 25px;
+  margin-bottom: -7px;
 }
 
 .sale p {
+  font-family: Roboto;
   font-size: 16px;
   line-height: 22px;
 }
@@ -725,6 +777,10 @@ a {
   border: 2px solid #e74246;
 }
 
+.user-write-us-container {
+  margin-bottom: 47px;
+}
+
 .button {
   font-size: 16px;
   line-height: 18px;
@@ -743,13 +799,11 @@ a {
 }
 
 .title-shop {
-  margin: 0 auto;
-  padding-left: 20px;
+  font-family: Roboto;
+  padding-left: 280px;
   padding-right: 20px;
-  text-align: center;
-  padding-top: 35px;
-  padding-bottom: 100px;
-  margin-bottom: 57px;
+  padding-top: 20px;
+  padding-bottom: 55px;
 }
 
 .site-nav .now-catalog {
@@ -1112,6 +1166,7 @@ opacity: 1;
   display: flex;
   justify-content: space-around;
   margin: 0 auto;
+  margin-left: 130px;
 }
 
 .price {
